# gpuemu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  specs.md  specs1.md  specs2.md  specs3.md
.github/workflows/: ci.yml  release.yml
crates/gpuemu/: Cargo.toml  README.md
crates/gpuemu-cli/: Cargo.toml  README.md
crates/gpuemu-cli/src/: main.rs  report.rs  signed_report.rs
crates/gpuemu-cli/src/debug/: mod.rs  repl.rs
crates/gpuemu-cli/src/init/: mod.rs  templates.rs
crates/gpuemu-client/: Cargo.toml  README.md
crates/gpuemu-client/src/: lib.rs
crates/gpuemu-client/tests/: integration.rs
crates/gpuemu-common/: Cargo.toml  README.md
crates/gpuemu-common/src/: calibration.rs  config.rs  lib.rs  protocol.rs  replay.rs  rng.rs  types.rs
crates/gpuemu-daemon/: Cargo.toml  README.md
crates/gpuemu-daemon/src/: artifact.rs  executor.rs  fuzzer.rs  main.rs  server.rs  storage.rs  validator.rs
crates/gpuemu/src/: main.rs  report.rs  signed_report.rs
crates/gpuemu/src/debug/: mod.rs  repl.rs
crates/gpuemu/src/init/: mod.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  INTEGRATIONS.md  PLATFORM_SUPPORT.md  PROJECT_SCOPE.md  ROADMAP.md  VALIDATION.md  WORKFLOW.md  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/development/: architecture.md  contributing.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guides/: custom-op-integrator.md  kernel-author.md  model-developer.md
docs/src/reference/: cli.md  config-schema.md  protocol.md  python-api.md
docs/src/tutorials/: ci-integration.md  jax-validation.md  pytorch-validation.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/concepts/: architecture.md  execution-modes.md  reference-scripts.md  validation.md
documentation/docs/development/: architecture-internals.md  contributing.md
documentation/docs/getting-started/: configuration.md  installation.md  quickstart.md
documentation/docs/guides/: custom-op-integrator.md  kernel-author.md  model-developer.md  vscode-extension.md
documentation/docs/reference/: cli.md  config-schema.md  environment-variables.md  framework-adapters.md  protocol.md  python-api.md
documentation/docs/troubleshooting/: common-issues.md  faq.md
documentation/docs/tutorials/: ci-integration.md  jax-validation.md  pytorch-validation.md  tensorflow-validation.md
documentation/docs/who-uses-gpuemu/: frontier-lab-kernel-team.md  inference-vendor.md  oss-inference-maintainer.md
documentation/docs/why-gpuemu/: compared-to.md  design-partners.md  the-evidence.md  the-industry-impact.md  the-problem.md
gpuemu-py/: README.md  pyproject.toml
gpuemu-py/gpuemu/: __init__.py  client.py  rng.py  validate.py
gpuemu-py/gpuemu/frameworks/: __init__.py  jax.py  pytorch.py  tensorflow.py
gpuemu-py/gpuemu/references/: __init__.py  __main__.py  ops.py
gpuemu-py/gpuemu/references/scripts/: attention.py  gelu.py  kv_cache_attention.py  matmul_gelu.py  matmul_silu.py  rmsnorm.py  rope.py  silu.py  softmax.py
gpuemu-py/gpuemu_py/: __init__.py  client.py  rng.py  tolerances.py  validate.py
gpuemu-py/gpuemu_py/frameworks/: __init__.py  base.py  jax.py  pytorch.py  tensorflow.py
gpuemu-py/tests/: __init__.py  test_daemon_roundtrip.py  test_jax.py  test_pytorch.py  test_references.py  test_smoke.py  test_tensorflow.py  test_tolerances.py
integrations/github-action/: README.md  action.yml
packaging/: README.md
packaging/conda/: meta.yaml
packaging/docker/: RELEASE_NOTES.md
packaging/homebrew/: gpuemu.rb
scripts/: install.sh
templates/: github-actions.yml  gitlab-ci.yml
vscode-gpuemu/: package-lock.json  package.json
vscode-gpuemu/snippets/: gpuemu.code-snippets
vscode-gpuemu/src/: extension.ts  runner.ts
vscode-gpuemu/src/commands/: index.ts
vscode-gpuemu/src/providers/: codeActions.ts  configValidator.ts  diagnostics.ts  failuresTree.ts  statusBar.ts  testController.ts  validationWatcher.ts
vscode-gpuemu/syntaxes/: gpuemu-toml.tmLanguage.json
