[workspace]
resolver = "2"
members = [
    "crates/gpuemu-common",
    "crates/gpuemu-daemon",
    "crates/gpuemu-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
repository = "https://github.com/Skelf-Research/gpuemu"
homepage = "https://docs.skelfresearch.com/gpuemu"
documentation = "https://docs.skelfresearch.com/gpuemu"
rust-version = "1.74"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# IPC
nng = "1.0"

# Storage
sled = "0.34"

# Serialization
rkyv = { version = "0.7", features = ["validation", "strict"] }
bytecheck = "0.6"

# RNG and hashing (Phase 2)
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
blake2 = "0.10"

# Compression
zstd = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates (version required so `cargo publish` can rewrite the path dep)
gpuemu-common = { path = "crates/gpuemu-common", version = "0.1.0" }
gpuemu-daemon = { path = "crates/gpuemu-daemon", version = "0.1.0" }

# Release profile optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Faster debug builds
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
