[package]
name = "gpuemu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Command-line interface for gpuemu — catch silently-wrong GPU kernels before they ship: fuzz, lint, baseline-diff, CI gating, and signed correctness reports"
readme = "README.md"
keywords = ["gpu", "cuda", "kernel", "validation", "ci"]
categories = ["development-tools::testing", "command-line-utilities", "science"]

[[bin]]
name = "gpuemu"
path = "src/main.rs"

[dependencies]
gpuemu-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
nng = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
toml = { workspace = true }

# Signed Kernel Correctness Report (gpuemu report --signed).
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
