[package]
name = "gpuemu-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }
description = "Rust-native client for the gpuemu validation daemon — drive fuzzing + the fp64 oracle from Rust, no Python bridge."

[dependencies]
gpuemu-common = { workspace = true }
nng = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
