[package]
name = "gpuemu-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-less validation daemon for deep learning kernels"

[[bin]]
name = "gpuemu-daemon"
path = "src/main.rs"

[dependencies]
gpuemu-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
nng = { workspace = true }
sled = { workspace = true }
rkyv = { workspace = true }
bytecheck = { workspace = true }
dirs = "5.0"
base64 = "0.21"
tempfile = "3.10"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
